--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=movie-booking-app
 # Database Configuration (example using H2 in-memory database)
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=admin1
-spring.datasource.password=admin1
+spring.datasource.username=admin
+spring.datasource.password=admin
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.idle-timeout=30000
