--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,23 @@
 spring.application.name=movie-booking-app
+
+
+
+#--------------postgress---------
+#spring.datasource.url=jdbc:postgresql://localhost:5432/MovieBooking
+#spring.datasource.username=root
+#spring.datasource.password=postgres
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresSQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+
 # Database Configuration (example using H2 in-memory database)
+# Databse h2 --------------------------
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=admin
 spring.datasource.password=admin
+
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.idle-timeout=30000
@@ -11,8 +25,6 @@ spring.datasource.hikari.pool-name=HikariPool-1
 spring.datasource.hikari.max-lifetime=2000000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.leak-detection-threshold=2000
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 logging.level.com.zaxxer.hikari=DEBUG
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
