--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,36 +1,36 @@
 spring.application.name=movie-booking-app
-#--------------mysql---------
-spring.datasource.url=jdbc:mysql://localhost:3306/MovieBooking
-spring.datasource.username=root
-spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-#spring.jpa.hibernate.ddl-auto=create
+##--------------mysql---------
+#spring.datasource.url=jdbc:mysql://localhost:3306/MovieBooking
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+##spring.jpa.hibernate.ddl-auto=create
 
 
 # Databse h2 --------------------------
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-#spring.datasource.url=jdbc:h2:mem:moviebooking
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.username=admin
-#spring.datasource.password=admin
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:h2:mem:moviebooking
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=admin
 
 
-#spring.datasource.hikari.minimum-idle=5
-#spring.datasource.hikari.maximum-pool-size=10
-#spring.datasource.hikari.idle-timeout=30000
-#spring.datasource.hikari.pool-name=HikariPool-1
-#spring.datasource.hikari.max-lifetime=2000000
-#spring.datasource.hikari.connection-timeout=30000
-#spring.datasource.hikari.leak-detection-threshold=2000
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.pool-name=HikariPool-1
+spring.datasource.hikari.max-lifetime=2000000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.leak-detection-threshold=2000
 #logging.level.com.zaxxer.hikari=DEBUG
 #spring.jpa.hibernate.ddl-auto=update
 
 
-#spring.thymeleaf.prefix=classpath:/templates/
-#spring.thymeleaf.suffix=.html
-#spring.thymeleaf.mode=HTML
-#spring.thymeleaf.encoding=UTF-8
-#spring.thymeleaf.cache=false
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.cache=false
 #logging.level.org.springframework=DEBUG
